fix: new user and new company links not cliackable on iphone

--- a/app/styles/templates/offer/_search_company.scss
+++ b/app/styles/templates/offer/_search_company.scss
@@ -4,6 +4,7 @@
   border-bottom: 0.1px solid;
   padding-bottom: 3%;
   padding-top: 3%;
+  cursor: pointer;
 
   a {
     text-decoration: underline;
